# pythonProject10

./: .coverage  .env  .flake8  .gitignore  README.md  conftest.py  env  env.example  exempl.py  external_api.py  generators.py  main.py  operations  pyproject.toml  pytest.ini
.mypy_cache/3.12/: _ast.data.json  _ast.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _frozen_importlib.data.json  _frozen_importlib.meta.json  _frozen_importlib_external.data.json  _frozen_importlib_external.meta.json  _io.data.json  _io.meta.json  _winapi.data.json  _winapi.meta.json  abc.data.json  abc.meta.json  ast.data.json  ast.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  contextlib.data.json  contextlib.meta.json  dataclasses.data.json  dataclasses.meta.json  datetime.data.json  datetime.meta.json  enum.data.json  enum.meta.json  genericpath.data.json  genericpath.meta.json  io.data.json  io.meta.json  main.data.json  main.meta.json  ntpath.data.json  ntpath.meta.json  pathlib.data.json  pathlib.meta.json  (+20 more)
.mypy_cache/3.12/_typeshed/: __init__.data.json  __init__.meta.json  importlib.data.json  importlib.meta.json
.mypy_cache/3.12/collections/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json
.mypy_cache/3.12/email/: __init__.data.json  __init__.meta.json  _policybase.data.json  _policybase.meta.json  charset.data.json  charset.meta.json  contentmanager.data.json  contentmanager.meta.json  errors.data.json  errors.meta.json  (+6 more)
date/: operations.json
generators/: generators.py
generatorss/: generators.py
htmlcov/: class_index.html  function_index.html  index.html  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_widget_py.html  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_conftest_py.html  z_a44f0ac069e85531_test_mycod_py.html
logs/: logging.conf
src/: .gitignore  decorators.py  external_.py  external_api.py  externalapi.py  generators.py  get_csv_exel.py  logs.txt  masks.py  processing.py  pythonProject10.logs.utils_logs  utils.py  widget.py
src/htmlcov/: status.json
tests/: confist.py  conftest.py  generators.py  logs.txt  test_mycod.py  test_mycode.py
(+44 files in other folders)
