[tool.poetry]
name = "pythonproject10"
version = "0.1.0"
description = ""
authors = ["Serz Kuh"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.3"
pytest-mock = "^3.15.1"
openpyxl = "^3.1.5"


[tool.poetry.group.lint.dependencies]
mypy = "^1.14.0"
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"


[tool.poetry.group.dev.dependencies]
lint = "^1.2.1"
pytest-cov = "^6.0.0"


[tool.poetry.group.dep.dependencies]
ksv = "^0.1.7"


[tool.poetry.group.dependencies.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 119

[tool.black]
line-length = 119




[tool.mypy]
disullow_antyped_defs = true
warn_return_any = true
exclude = 'venv'

[tool.isort]
line_length = 119





